--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                     <a class="nav-link nav-active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/explore.html">Explore</a>
+                    <a class="nav-link" href="forms/explore.html">Explore</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/404.html">Bookings</a>
+                    <a class="nav-link" href="forms/404.html">Bookings</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#category">Category</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/about.html">AboutUs</a>
+                    <a class="nav-link" href="forms/about.html">AboutUs</a>
                   </li>
                   <li class="nav-item nav-login">
-                    <a class="nav-link" href="/forms/login.html">Login</a>
+                    <a class="nav-link" href="forms/login.html">Login</a>
                   </li>
                 </ul>
               </div>
@@ -64,21 +64,21 @@
             </div>
             <div class="carousel-inner carousel-shape">
                 <div class="carousel-item active" data-bs-interval="10000">
-                <img src="/images/bg3.jpg" class="d-block w-100" height="500px" alt="">
+                <img src="images/bg3.jpg" class="d-block w-100" height="500px" alt="">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 id="kerala">K E R A L A</h5>
                     <p>Explore the culture and Tradition</p>
                 </div>
                 </div>
                 <div class="carousel-item " data-bs-interval="10000">
-                <img src="/images/bg1.jpg" class="d-block w-100" height="500px" alt="...">
+                <img src="images/bg1.jpg" class="d-block w-100" height="500px" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>ALAPPUZHA</h5>
                     <p>Town with canals, backwaters, beaches, and lagoons</p>
                 </div>
                 </div>
                 <div class="carousel-item " data-bs-interval="10000">
-                <img src="/images/bg2.jpg" class="d-block w-100" height="500px" alt="...">
+                <img src="images/bg2.jpg" class="d-block w-100" height="500px" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>WAYANAD</h5>
                     <p>Elevated picturesque mountainous plateau in the Western Ghats</p>
@@ -142,7 +142,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4 tile-card">
         <div class="col">
           <div class="card">
-            <img src="/images/resort1.jpg" class="card-img-top" alt="...">
+            <img src="images/resort1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Resorts</h5>
               <p class="card-text">Lined by coconut trees and backwaters just lying next to the backwaters, Kerala beaches are on of the top attractions of the state. Beach resorts to enjoy a beach holiday in this gorgeous destination</p>
@@ -151,7 +151,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="/images/painting.webp" class="card-img-top" alt="...">
+            <img src="images/painting.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Art</h5>
               <p class="card-text">The traditional paintings of Kerala are a fine art of skill and creative excellence. Most of the works of Kerala are shown here. They bear the stamp of uniqueness in techniques used and aesthetics.</p>
@@ -160,7 +160,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="/images/kathakli.jpg" class="card-img-top" alt="...">
+            <img src="images/kathakli.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Tradition</h5>
               <p class="card-text">Kerala has around 50 forms of traditional dances. Theyyam, Thiruvathirakali, Chakyar Koothu Koodiyattam, and Ottamthullal are some of the prominent dances.Explore about the unique classical dance forms of Kerala.</p>
@@ -169,7 +169,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="/images/kerala cusine.jpg" class="card-img-top" alt="...">
+            <img src="images/kerala cusine.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Food Cusine</h5>
               <p class="card-text">The cuisine of Kerala is known for its generous use of spices, coconuts and vegetables exclusively grown in the region. The variety of flavours in this cuisine range from spicy to mellow and sweet.</p>
@@ -178,7 +178,7 @@
         </div>
         <div class="col">
             <div class="card">
-              <img src="/images/activites.jpg" class="card-img-top" alt="...">
+              <img src="images/activites.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Activites</h5>
                 <p class="card-text">Kerala offers some of the most diverse kinds of adventure sports in India that are a must try for an adventure enthusiast, like Parasailing, Trekking, Tree House Stay, Kayaking, Wildlife Safari, Mountain Climbing </p>
@@ -187,7 +187,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="/images/travel.jpg" class="card-img-top" alt="...">
+              <img src="images/travel.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Travel</h5>
                 <p class="card-text">Tourists that would rather travel longer distances along the state of Kerala enjoy the travel through boats, buses, trains, taxis, flights etc. We make it available to you for booking all within a single option through our website.</p>
@@ -210,7 +210,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 category-body">
             <div class="col">
               <div class="card">
-                <img src="/images/camping.jpg" class="card-img-top" alt="...">
+                <img src="images/camping.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">CAMPING</h5>
                 </div>
@@ -218,7 +218,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/fishing.jpg" class="card-img-top" alt="...">
+                <img src="images/fishing.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">FISHING</h5>
                 </div>
@@ -226,7 +226,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/culture tour.jpg" class="card-img-top" alt="...">
+                <img src="images/culture tour.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">CULTURE TOUR</h5>
                 </div>
@@ -234,7 +234,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/houseboat cruise.jpg" class="card-img-top" alt="...">
+                <img src="images/houseboat cruise.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">HOUSEBOAT CRUISE</h5>
                 </div>
@@ -242,7 +242,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/paragliding.webp" class="card-img-top" alt="...">
+                <img src="images/paragliding.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">PARAGLIDING</h5>
                 </div>
@@ -250,7 +250,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/tea trail.jpg" class="card-img-top" alt="...">
+                <img src="images/tea trail.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">TEA TRAIL</h5>
                 </div>
