--- a/forms/wayanad.html
+++ b/forms/wayanad.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Kerala Tourism</title>
-    <link rel="shortcut icon" href="/images/logokerala.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logokerala.png" type="image/x-icon">
     <link rel="stylesheet" href="/style.css">
     <!-- Font awsome kit -->
     <script src="https://kit.fontawesome.com/541277e46f.js" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg nav-bg">
             <div class="container-fluid">
                 <div class="navbar-brand">
-                      <img src="/images/logo.png"  alt="" height="50">
+                      <img src="../images/logo.png"  alt="" height="50">
                   </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
