--- a/forms/wayanad.html
+++ b/forms/wayanad.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg nav-bg">
             <div class="container-fluid">
                 <div class="navbar-brand">
-                      <img src="../images/logo.png"  alt="" height="50">
+                      <img src="./images/logo.png"  alt="" height="50">
                   </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,16 +35,16 @@
                     <a class="nav-link nav-active" href="/forms/explore.html">Explore</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/404.html">Bookings</a>
+                    <a class="nav-link" href="./forms/404.html">Bookings</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Category</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/about.html">AboutUs</a>
+                    <a class="nav-link" href="./forms/about.html">AboutUs</a>
                   </li>
                   <li class="nav-item nav-login">
-                    <a class="nav-link" href="/forms/login.html">Login</a>
+                    <a class="nav-link" href="./forms/login.html">Login</a>
                   </li>
                 </ul>
               </div>
@@ -62,7 +62,7 @@
             </div>
             <div class="dist-content">
                 <div class="dist-content-img">
-                <img src="/images/wayanadhousroof.jpg" class="img-fluid" alt="">
+                <img src="./images/wayanadhousroof.jpg" class="img-fluid" alt="">
                 </div>
                 <p><span>Wayanad</span>, is an Indian district in the north-east of Kerala state with administrative headquarters at the municipality of Kalpetta. It is the only plateau in Kerala. The Wayanad Plateau forms a continuation of the Mysore Plateau, the southern portion of Deccan Plateau. It is set high in the Western Ghats with altitudes ranging from 700 to 2100 meters. Vellari Mala, a 2,240 m (7,349 ft) high peak situated on the trijunction of Wayanad, Malappuram, and Kozhikode districts, is the highest point in Wayanad district. The district was formed on 1 November 1980 as the 12th district in Kerala, by carving out areas from Kozhikode and Kannur districts. An area of 885.92 km2 of the district is forested. Wayanad has three municipal towns—Kalpetta, Mananthavady and Sulthan Bathery. There are many indigenous tribes in this area. The Kabini River, a tributary of Kaveri River, originates at Wayanad. Wayanad district, along with the Chaliyar valley in neighbouring Nilambur (Eastern Eranad region) in Malappuram district, is known for natural gold fields, which are also seen in other parts of the Nilgiri Biosphere Reserve. Chaliyar river, which is the fourth longest river of Kerala, originates on the Wayanad plateau. The historically important Edakkal Caves are located in Wayanad district.</p>
 
