--- a/forms/explore.html
+++ b/forms/explore.html
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href="/forms/wayanad.html"><img class="timeline__img" src="/images/waynad.jpg"/></a>
+      <div class="timeline__content"><a href="./forms/wayanad.html"><img class="timeline__img" src="/images/waynad.jpg"/></a>
         <h2 class="timeline__content-title">Wayanad</h2>
         <p class="timeline__content-desc">This popular town is famous for wildlife and its spice plantations. Wayanad is part of a forest reserve, located on the border of Tamil Nadu and Kerala. Because of it wild green coverage it offers great scenic beauty along with the experience of seeing wildlife.</p>
       </div>
