--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a class="nav-link nav-active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="forms/explore.html">Explore</a>
+                    <a class="nav-link" href="./forms/explore.html">Explore</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="forms/404.html">Bookings</a>
