--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- Carousel -->
     <section class="hero-page">
-    <div class="container">
+    <div class="container slider">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators" >
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -64,21 +64,21 @@
             </div>
             <div class="carousel-inner carousel-shape">
                 <div class="carousel-item active" data-bs-interval="10000">
-                <img src="images/bg3.jpg" class="d-block w-100" height="500px" alt="">
+                <img src="images/bg3.jpg" class="d-block w-100 img-fluid" height="500px" alt="">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 id="kerala">K E R A L A</h5>
                     <p>Explore the culture and Tradition</p>
                 </div>
                 </div>
                 <div class="carousel-item " data-bs-interval="10000">
-                <img src="images/bg1.jpg" class="d-block w-100" height="500px" alt="...">
+                <img src="images/bg1.jpg" class="d-block w-100  img-fluid" height="500px" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>ALAPPUZHA</h5>
                     <p>Town with canals, backwaters, beaches, and lagoons</p>
                 </div>
                 </div>
                 <div class="carousel-item " data-bs-interval="10000">
-                <img src="images/bg2.jpg" class="d-block w-100" height="500px" alt="...">
+                <img src="images/bg2.jpg" class="d-block w-100  img-fluid" height="500px" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>WAYANAD</h5>
                     <p>Elevated picturesque mountainous plateau in the Western Ghats</p>
