--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kerala Tourism</title>
     <link rel="shortcut icon" href="images/logokerala.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- Font awsome kit -->
     <script src="https://kit.fontawesome.com/541277e46f.js" crossorigin="anonymous"></script>
     
@@ -41,10 +41,10 @@
                     <a class="nav-link" href="#category">Category</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="forms/about.html">AboutUs</a>
+                    <a class="nav-link" href="./forms/about.html">AboutUs</a>
                   </li>
                   <li class="nav-item nav-login">
-                    <a class="nav-link" href="forms/login.html">Login</a>
+                    <a class="nav-link" href="./forms/login.html">Login</a>
                   </li>
                 </ul>
               </div>
