--- a/forms/explore.html
+++ b/forms/explore.html
@@ -64,19 +64,19 @@
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href="/forms/kannur.html"><img class="timeline__img" src="/images/kannur.jpg"/></a>
+      <div class="timeline__content"><a href="./kannur.html"><img class="timeline__img" src="/images/kannur.jpg"/></a>
         <h2 class="timeline__content-title">Kannur</h2>
         <p class="timeline__content-desc">Kannur is dubbed as the City of Looms and Lores, thanks to the flourishing handloom industry and folk art called Theyyam. Theyyamis a ritualistic artform encompassing dance, music and mime, where the artist dons the guise of God. Kannur is believed to have got its name from being the land of Kannan or Krishna.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href="./forms/wayanad.html"><img class="timeline__img" src="/images/waynad.jpg"/></a>
+      <div class="timeline__content"><a href="./wayanad.html"><img class="timeline__img" src="/images/waynad.jpg"/></a>
         <h2 class="timeline__content-title">Wayanad</h2>
         <p class="timeline__content-desc">This popular town is famous for wildlife and its spice plantations. Wayanad is part of a forest reserve, located on the border of Tamil Nadu and Kerala. Because of it wild green coverage it offers great scenic beauty along with the experience of seeing wildlife.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href="/forms/kozhikode.html"><img class="timeline__img" src="/images/kozhikode.webp"/></a>
+      <div class="timeline__content"><a href="./kozhikode.html"><img class="timeline__img" src="/images/kozhikode.webp"/></a>
         <h2 class="timeline__content-title">Kozhikode</h2>
         <p class="timeline__content-desc"> Kozhikode was anglicised to Calicut, as the district is famous for its unique 'Calicut cotton' and Calico cloths. In the year 1498, Vasco da Gama arrived in the city of Kappad of Kozhikode, and this kindled the bilateral trade relationship with Portuguese.</p>
       </div>
@@ -100,7 +100,7 @@
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href="/forms/ernakulam.html"><img class="timeline__img" src="/images/ernakulam.webp"/></a>
+      <div class="timeline__content"><a href="./ernakulam.html"><img class="timeline__img" src="/images/ernakulam.webp"/></a>
         <h2 class="timeline__content-title">Ernakulam</h2>
         <p class="timeline__content-desc">Popularly known as the Queen of Arabian Sea, the city also flaunts one of the finest natural harbours of the world and was the centre of the world spice trade for many centuries.</p>
       </div>
@@ -119,7 +119,7 @@
     </div>
       <div class="timeline">
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href="/forms/alappuzha.html"><img class="timeline__img" src="/images/alleppey.jpg"/></a>
+      <div class="timeline__content"><a href="./alappuzha.html"><img class="timeline__img" src="/images/alleppey.jpg"/></a>
         <h2 class="timeline__content-title">Alappuzha</h2>
         <p class="timeline__content-desc">Alappuzha, famous for its boat races, beaches, marine products and coir industry, is a world renowned backwater tourist destination of India. Kuttanad, Alappuzha backwaters and Alappuzha beach are the must-see tourist attractions in the district.</p>
       </div>
