--- a/forms/wayanad.html
+++ b/forms/wayanad.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Kerala Tourism</title>
-    <link rel="shortcut icon" href="images/logokerala.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="./images/logokerala.png" type="image/x-icon">
+    <link rel="stylesheet" href="./style.css">
     <!-- Font awsome kit -->
     <script src="https://kit.fontawesome.com/541277e46f.js" crossorigin="anonymous"></script>
     
@@ -29,7 +29,7 @@
               <div class="collapse navbar-collapse navlink-spacing" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link nav-active" href="/forms/explore.html">Explore</a>
@@ -82,7 +82,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 category-body">
             <div class="col">
               <div class="card">
-                <img src="/images/waynad-Banasura Sagar Dam.jpg" class="card-img-top" alt="...">
+                <img src="./images/waynad-Banasura Sagar Dam.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">Banasura Sagar Dam</h5>
                 </div>
@@ -90,7 +90,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/waynad-Chembra Peak.jpg" class="card-img-top" alt="...">
+                <img src="./images/waynad-Chembra Peak.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">Chembra Peak</h5>
                 </div>
@@ -98,7 +98,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/waynad-Edakkal Caves.jpg" class="card-img-top" alt="...">
+                <img src="../images/waynad-Edakkal Caves.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">Edakkal Caves</h5>
                 </div>
@@ -106,7 +106,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/waynad-Wayanad Wildlife Sanctuary..jpg" class="card-img-top" alt="...">
+                <img src="./images/waynad-Wayanad Wildlife Sanctuary..jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Wildlife Sanctuary</h5>
                 </div>
