--- a/forms/explore.html
+++ b/forms/explore.html
@@ -64,7 +64,7 @@
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href="./kannur.html"><img class="timeline__img" src="/images/kannur.jpg"/></a>
+      <div class="timeline__content"><a href="kannur.html"><img class="timeline__img" src="../images/kannur.jpg"/></a>
         <h2 class="timeline__content-title">Kannur</h2>
         <p class="timeline__content-desc">Kannur is dubbed as the City of Looms and Lores, thanks to the flourishing handloom industry and folk art called Theyyam. Theyyamis a ritualistic artform encompassing dance, music and mime, where the artist dons the guise of God. Kannur is believed to have got its name from being the land of Kannan or Krishna.</p>
       </div>
