--- a/forms/explore.html
+++ b/forms/explore.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About- Kerala Tourism</title>
-    <link rel="shortcut icon" href="/images/logokerala.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logokerala.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
     <!-- Font awsome kit -->
     <script src="https://kit.fontawesome.com/541277e46f.js" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg nav-bg">
             <div class="container-fluid">
                 <div class="navbar-brand">
-                      <img src="/images/logo.png"  alt="" height="50">
+                      <img src="../images/logo.png"  alt="" height="50">
                   </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,13 +35,13 @@
                     <a class="nav-link nav-active" href="#">Explore</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/404.html">Bookings</a>
+                    <a class="nav-link" href="404.html">Bookings</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Category</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/about.html">AboutUs</a>
+                    <a class="nav-link" href="about.html">AboutUs</a>
                   </li>
                 </ul>
               </div>
@@ -58,7 +58,7 @@
   </div>
   <div class="timeline">
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href=""><img class="timeline__img" src="/images/Kasargod.jpg" /></a>
+      <div class="timeline__content"><a href=""><img class="timeline__img" src="../images/Kasargod.jpg" /></a>
         <h2 class="timeline__content-title">kasaragod</h2>
         <p class="timeline__content-desc">The northernmost district of Kerala, Kasaragod is famous for its handlooms and its 293 kilometre long coastline. With its cultural uniqueness, the place is known as the land of gods. Rich in history, Kasaragod is home to the largest and best preserved fort in the State - Bekal.</p>
       </div>
@@ -70,75 +70,75 @@
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href="./wayanad.html"><img class="timeline__img" src="/images/waynad.jpg"/></a>
+      <div class="timeline__content"><a href="wayanad.html"><img class="timeline__img" src="../images/waynad.jpg"/></a>
         <h2 class="timeline__content-title">Wayanad</h2>
         <p class="timeline__content-desc">This popular town is famous for wildlife and its spice plantations. Wayanad is part of a forest reserve, located on the border of Tamil Nadu and Kerala. Because of it wild green coverage it offers great scenic beauty along with the experience of seeing wildlife.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href="./kozhikode.html"><img class="timeline__img" src="/images/kozhikode.webp"/></a>
+      <div class="timeline__content"><a href="kozhikode.html"><img class="timeline__img" src="../images/kozhikode.webp"/></a>
         <h2 class="timeline__content-title">Kozhikode</h2>
         <p class="timeline__content-desc"> Kozhikode was anglicised to Calicut, as the district is famous for its unique 'Calicut cotton' and Calico cloths. In the year 1498, Vasco da Gama arrived in the city of Kappad of Kozhikode, and this kindled the bilateral trade relationship with Portuguese.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href=""><img class="timeline__img" src="/images/malappuram.jpg"/></a>
+      <div class="timeline__content"><a href=""><img class="timeline__img" src="../images/malappuram.jpg"/></a>
         <h2 class="timeline__content-title">Malappuram</h2>
         <p class="timeline__content-desc">Malappuram has made numerous contributions to the cultural heritage of Kerala. A famous centre for Hindu-Vedic learning and Islamic philosophy, the temples and mosques of this region are well known for their spectacular festivals.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href=""><img class="timeline__img" src="/images/palakkad.webp"/></a>
+      <div class="timeline__content"><a href=""><img class="timeline__img" src="../images/palakkad.webp"/></a>
         <h2 class="timeline__content-title">Palakkad</h2>
         <p class="timeline__content-desc">Palakkad is also known as the rice bowl of Kerala. The 18th-century Palakkad Fort has sturdy battlements, a moat, and a Hanuman temple on its grounds. North on the Kalpathy River, the 15th-century Viswanatha Swamy Temple is the main venue of the Ratholsavam chariot festival.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href=""><img class="timeline__img" src="/images/Thrissur.jpg"/></a>
+      <div class="timeline__content"><a href=""><img class="timeline__img" src="../images/Thrissur.jpg"/></a>
         <h2 class="timeline__content-title">Thrissur</h2>
         <p class="timeline__content-desc">Thrissur is known as the cultural capital of Kerala, and the land of Poorams. The district is known for its ancient temples, churches, and mosques. Thrissur Pooram is the most colourful temple festival in Kerala.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href="./ernakulam.html"><img class="timeline__img" src="/images/ernakulam.webp"/></a>
+      <div class="timeline__content"><a href="ernakulam.html"><img class="timeline__img" src="../images/ernakulam.webp"/></a>
         <h2 class="timeline__content-title">Ernakulam</h2>
         <p class="timeline__content-desc">Popularly known as the Queen of Arabian Sea, the city also flaunts one of the finest natural harbours of the world and was the centre of the world spice trade for many centuries.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href=""><img class="timeline__img" src="/images/idduki.jpg"/></a>
+      <div class="timeline__content"><a href=""><img class="timeline__img" src="../images/idduki.jpg"/></a>
         <h2 class="timeline__content-title">Idukki</h2>
         <p class="timeline__content-desc">Idukki district is famous for its rich flora and fauna. It is home to the popular Eravikulam National Park and is characterized by the Anamudi mountain. Idukki is one of the greenest districts of Kerala.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href=""><img class="timeline__img" src="/images/kottayam.jpg"/></a>
+      <div class="timeline__content"><a href=""><img class="timeline__img" src="../images/kottayam.jpg"/></a>
         <h2 class="timeline__content-title">Kottayam</h2>
         <p class="timeline__content-desc">Most of India's natural rubber originates from the acres of well-kept plantations of Kottayam, also with lot of tourist attractions. Kottayam is also called as “Akshara Nagari” which means the “city of letters” considering its contribution to print media and literature.</p>
       </div>
     </div>
       <div class="timeline">
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href="./alappuzha.html"><img class="timeline__img" src="/images/alleppey.jpg"/></a>
+      <div class="timeline__content"><a href="alappuzha.html"><img class="timeline__img" src="../images/alleppey.jpg"/></a>
         <h2 class="timeline__content-title">Alappuzha</h2>
         <p class="timeline__content-desc">Alappuzha, famous for its boat races, beaches, marine products and coir industry, is a world renowned backwater tourist destination of India. Kuttanad, Alappuzha backwaters and Alappuzha beach are the must-see tourist attractions in the district.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href=""><img class="timeline__img" src="/images/pathanamthitta.jpg"/></a>
+      <div class="timeline__content"><a href=""><img class="timeline__img" src="../images/pathanamthitta.jpg"/></a>
         <h2 class="timeline__content-title">Pathanamthitta</h2>
         <p class="timeline__content-desc">Pathanamthitta district is known as the Headquarters of Pilgrimage Tourism, of the Kerala State. Situated near the Western Ghats and bordered by the hills, Pathanamthitta district is a treat to eyes with its vast unending stretches of forests, rivers and rural landscapes.</p>
       </div>
     </div>
     <div class="timeline">
     <div class="timeline-item" data-text="DESTINATIONS">
-      <div class="timeline__content"><a href=""><img class="timeline__img" src="/images/kollam.jpg" /></a>
+      <div class="timeline__content"><a href=""><img class="timeline__img" src="../images/kollam.jpg" /></a>
         <h2 class="timeline__content-title">Kollam</h2>
         <p class="timeline__content-desc">A famous port of international spice trade in ancient India, the present day Kollam is famous for its varied modern industries including cashew nut processing and research, fisheries, etc. Its association with the renowned Ashtamudi Lake makes it the gateway to the magnificent backwaters of Kerala.</p>
       </div>
     </div>
     <div class="timeline-item" data-text="DESTINATIONS">
-        <div class="timeline__content"><a href=""><img class="timeline__img" src="/images/Thiruvananthapuram.jpg"/></a>
+        <div class="timeline__content"><a href=""><img class="timeline__img" src="../images/Thiruvananthapuram.jpg"/></a>
           <h2 class="timeline__content-title">Trivandram</h2>
           <p class="timeline__content-desc">Thiruvananthapuram is a major tourist centre, known for the Padmanabhaswamy Temple, the beaches of Kovalam and Varkala, the backwaters of Poovar and Anchuthengu and its Western Ghats tracts of Ponmudi and the Agastya Mala.</p>
         </div>
