--- a/forms/kannur.html
+++ b/forms/kannur.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Kerala Tourism</title>
-    <link rel="shortcut icon" href="/images/logokerala.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="../images/logokerala.png" type="image/x-icon">
+    <link rel="stylesheet" href="../style.css">
     <!-- Font awsome kit -->
     <script src="https://kit.fontawesome.com/541277e46f.js" crossorigin="anonymous"></script>
     
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg nav-bg">
             <div class="container-fluid">
                 <div class="navbar-brand">
-                      <img src="/images/logo.png"  alt="" height="50">
+                      <img src="../images/logo.png"  alt="" height="50">
                   </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -29,22 +29,22 @@
               <div class="collapse navbar-collapse navlink-spacing" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link nav-active" href="/forms/explore.html">Explore</a>
+                    <a class="nav-link nav-active" href="explore.html">Explore</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/404.html">Bookings</a>
+                    <a class="nav-link" href="404.html">Bookings</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Category</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/about.html">AboutUs</a>
+                    <a class="nav-link" href="about.html">AboutUs</a>
                   </li>
                   <li class="nav-item nav-login">
-                    <a class="nav-link" href="/forms/login.html">Login</a>
+                    <a class="nav-link" href="login.html">Login</a>
                   </li>
                 </ul>
               </div>
@@ -62,7 +62,7 @@
             </div>
             <div class="dist-content">
                 <div class="dist-content-img">
-                <img src="/images/kannur Fort.jpg" class="img-fluid" height="450px" alt="">
+                <img src="../images/kannur Fort.jpg" class="img-fluid" height="450px" alt="">
                 </div>
                 <p><span>Kannur</span> formerly known in English as Cannanore, is a city and a Municipal Corporation in the state of Kerala, India. It is the administrative headquarters of the Kannur district and situated 274 kilometres (170 mi) north of the major port city & commercial hub Kochi & 137 kilometres (85 mi) south of the major port city & a commercial hub, Mangalore. During the period of British colonial rule in India, when Kannur was a part of the Malabar District (Madras Presidency), the city was known as Cannanore. Kannur is 6th largest urban agglomeration in Kerala. As of 2011 census, Kannur Municipal Corporation, the local body which administers mainland area of city, had a population of 232,486.</p>
 
@@ -83,7 +83,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 category-body">
             <div class="col">
               <div class="card">
-                <img src="/images/kannur-Kannur Lighthouse.jpg" class="card-img-top" alt="...">
+                <img src="../images/kannur-Kannur Lighthouse.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">Light House</h5>
                 </div>
@@ -91,7 +91,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/kannur-Muzhappilangad Beach.jpg" class="card-img-top" alt="...">
+                <img src="../images/kannur-Muzhappilangad Beach.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">Muzhappilangadi Beach</h5>
                 </div>
@@ -99,7 +99,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/kannur-Palakkayam Thattu.jpg" class="card-img-top" alt="...">
+                <img src="../images/kannur-Palakkayam Thattu.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">Palakkayam Thattu</h5>
                 </div>
@@ -107,7 +107,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/kannur-St. Angelo Fort.webp" class="card-img-top" alt="...">
+                <img src="../images/kannur-St. Angelo Fort.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">St. Angelo Fort</h5>
                 </div>
