--- a/forms/kozhikode.html
+++ b/forms/kozhikode.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Kerala Tourism</title>
-    <link rel="shortcut icon" href="/images/logokerala.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="../images/logokerala.png" type="image/x-icon">
+    <link rel="stylesheet" href="../style.css">
     <!-- Font awsome kit -->
     <script src="https://kit.fontawesome.com/541277e46f.js" crossorigin="anonymous"></script>
     
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg nav-bg">
             <div class="container-fluid">
                 <div class="navbar-brand">
-                      <img src="/images/logo.png"  alt="" height="50">
+                      <img src="../images/logo.png"  alt="" height="50">
                   </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -29,22 +29,22 @@
               <div class="collapse navbar-collapse navlink-spacing" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link nav-active" href="/forms/explore.html">Explore</a>
+                    <a class="nav-link nav-active" href="explore.html">Explore</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/404.html">Bookings</a>
+                    <a class="nav-link" href="404.html">Bookings</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Category</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/about.html">AboutUs</a>
+                    <a class="nav-link" href="about.html">AboutUs</a>
                   </li>
                   <li class="nav-item nav-login">
-                    <a class="nav-link" href="/forms/login.html">Login</a>
+                    <a class="nav-link" href="login.html">Login</a>
                   </li>
                 </ul>
               </div>
@@ -62,7 +62,7 @@
             </div>
             <div class="dist-content">
                 <div class="dist-content-img">
-                <img src="/images/kozhikode.webp" class="img-fluid" height="450px" alt="">
+                <img src="../images/kozhikode.webp" class="img-fluid" height="450px" alt="">
                 </div>
                 <p><span>Kozhikode</span>, also known in English as Calicut, is a city along the Malabar Coast in the state of Kerala in India. It has a corporation limit population of 609,224 and a metropolitan population of more than 2 million, making it the second largest metropolitan area in Kerala and the 19th largest in India. Kozhikode is classified as a Tier 2 city by the Government of India.</p>
 
@@ -81,7 +81,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 category-body">
             <div class="col">
               <div class="card">
-                <img src="/images/kozhikode-Kakkayam Dam.jpg" class="card-img-top" alt="...">
+                <img src="../images/kozhikode-Kakkayam Dam.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">Kakkayam Dam</h5>
                 </div>
@@ -89,7 +89,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/kozhikode-Kappad Beach.webp" class="card-img-top" alt="...">
+                <img src="../images/kozhikode-Kappad Beach.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">Kappad Beach</h5>
                 </div>
@@ -97,7 +97,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/kozhikode-Sargaalaya.jpg" class="card-img-top" alt="...">
+                <img src="../images/kozhikode-Sargaalaya.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                    <h5 class="card-title">Sargaalaya</h5>
                 </div>
@@ -105,7 +105,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/images/kozhikode-Vayalada. Mountains.jpg" class="card-img-top" alt="...">
+                <img src="../images/kozhikode-Vayalada. Mountains.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Vayalada Mountains</h5>
                 </div>
