--- a/forms/login.html
+++ b/forms/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Kerala Tourism</title>
-    <link rel="shortcut icon" href="/images/logokerala.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="../images/logokerala.png" type="image/x-icon">
+    <link rel="stylesheet" href="../style.css">
     <!-- Font awsome kit -->
     <script src="https://kit.fontawesome.com/541277e46f.js" crossorigin="anonymous"></script>
     
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg nav-bg">
             <div class="container-fluid">
                 <div class="navbar-brand">
-                      <img src="/images/logo.png"  alt="" height="50">
+                      <img src="../images/logo.png"  alt="" height="50">
                   </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -29,22 +29,22 @@
               <div class="collapse navbar-collapse navlink-spacing" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/explore.html">Explore</a>
+                    <a class="nav-link" href="explore.html">Explore</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/404.html">Bookings</a>
+                    <a class="nav-link" href="404.html">Bookings</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Category</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/forms/about.html">AboutUs</a>
+                    <a class="nav-link" href="about.html">AboutUs</a>
                   </li>
                   <li class="nav-item nav-login">
-                    <a class="nav-link" href="/forms/signup.html">Signup</a>
+                    <a class="nav-link" href="signup.html">Signup</a>
                   </li>
                 </ul>
               </div>
