--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="./forms/explore.html">Explore</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="forms/404.html">Bookings</a>
+                    <a class="nav-link" href="./forms/404.html">Bookings</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#category">Category</a>
