--- a/forms/login.html
+++ b/forms/login.html
@@ -73,7 +73,7 @@
             <button type="submit" class="btn-primary log-submit">Submit</button>
             <div class="mb-3">
                 <label for="signup" class="form-label">Don't have an account?</label>
-                <button type="submit" class="btn-primary log-register sign"><a href="/forms/signup.html">Register</a></button>
+                <button type="submit" class="btn-primary log-register sign"><a href="signup.html">Register</a></button>
               </div>
         </form>
     </div>
